--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@ html.no-scroll,
 body.no-scroll {
   overflow-y: hidden;
 }
+img {
+  max-width: 100%;
+}
 
 /* COMMON STYLE */
 .section {
@@ -48,20 +51,29 @@ body.no-scroll {
   color: #fff;
 }
 .button {
-  background: #6f73ee;
+  background-color: #6f73ee;
   color: #fff;
   font-size: 16px;
   border: none;
   cursor: pointer;
   border-radius: 5px;
+  transition: opacity 0.3s;
+}
+.button:hover {
+  opacity: 0.8;
 }
 .button-light {
-  background: #fff;
+  background-color: #fff;
   color: #6f73ee;
   font-size: 16px;
   border: none;
   cursor: pointer;
   border-radius: 5px;
+  transition: background-color 0.3s;
+}
+.button-light:hover {
+  background-color: #a8abff;
+  color: #fff;
 }
 
 /* NAVBAR */
@@ -69,18 +81,25 @@ body.no-scroll {
   height: 100%;
 }
 .header-nav-wrapper {
+  position: fixed;
+  top: 0;
+  background-color: #fff;
+  width: 100%;
+  min-height: 39px;
+  list-style: none;
+  z-index: 200;
+  border-bottom: 1px solid #ecf3ff;
+}
+.header-nav-wrapper-container {
+  display: flex;
   padding-top: 19px;
   padding-left: 0;
   padding-right: 0;
   padding-bottom: 11px;
-  display: flex;
   flex-basis: 100%;
   align-items: center;
   justify-content: space-between;
-  height: 100%;
-  margin: 0;
-  list-style: none;
-  border-bottom: 1px solid #ecf3ff;
+  margin: 0 auto;
 }
 .header-nav-menu-wrapper {
   display: flex;
@@ -95,6 +114,9 @@ body.no-scroll {
   align-items: center;
   height: 100%;
 }
+.header-nav-close {
+  display: none;
+}
 .header-nav-link {
   text-decoration: none;
   font-style: normal;
@@ -102,6 +124,10 @@ body.no-scroll {
   font-size: 12px;
   line-height: 17px;
   color: #5d6c7b;
+  transition: color 0.3s;
+}
+.header-nav-link:hover {
+  color: #6f73ee;
 }
 .header-nav-social {
   margin-left: 30px;
@@ -110,8 +136,13 @@ body.no-scroll {
   margin-right: 5px;
 }
 .nav-social-icon {
+  fill: #5d6c7b;
   width: 12px;
   height: 12px;
+  transition: fill 0.3s;
+}
+.nav-social-icon:hover {
+  fill: #6f73ee;
 }
 .header-phone-link {
   left: 0;
@@ -121,6 +152,13 @@ body.no-scroll {
   font-size: 12px;
   line-height: 17px;
   color: #282739;
+  transition: color 0.3s;
+}
+.header-phone-link:hover {
+  color: #6f73ee;
+}
+.burger-menu {
+  display: none;
 }
 .logo {
   font-size: 30px;
@@ -130,6 +168,7 @@ body.no-scroll {
   display: flex;
   align-items: center;
   margin: 20px 0;
+  margin-top: 70px;
 }
 .search-button {
   display: flex;
@@ -141,9 +180,7 @@ body.no-scroll {
 .button-burger-icon {
   height: 14px;
   width: 14px;
-}
-.button-burger-text {
-  margin-left: 10px;
+  margin-right: 10px;
 }
 .search-form {
   flex-shrink: 0;
@@ -204,7 +241,6 @@ body.no-scroll {
 }
 
 /* MAIN */
-
 .main {
   margin-top: 40px;
 }
@@ -219,7 +255,7 @@ body.no-scroll {
   border-radius: 5px;
 }
 .main-content {
-  padding: 56px 0;
+  padding: 54px 0;
 }
 .title-main {
   max-width: 612px;
@@ -229,10 +265,10 @@ body.no-scroll {
   font-size: 20px;
   line-height: 29px;
   color: #ffffff;
-  margin-top: 2px;
+  margin-top: 5px;
 }
 .main-content-elements {
-  margin-top: 28px;
+  margin-top: 27px;
   display: flex;
   align-items: center;
   gap: 38px;
@@ -258,7 +294,7 @@ body.no-scroll {
   color: #fff;
 }
 .main-button {
-  margin-top: 38px;
+  margin-top: 34px;
   padding: 15px 41px;
 }
 .adress {
@@ -297,7 +333,7 @@ body.no-scroll {
   max-width: 645px;
 }
 .promo-block-description {
-  margin-top: 24px;
+  margin-top: 29px;
 }
 .promo-block-list {
   margin-top: 16px;
@@ -363,9 +399,8 @@ body.no-scroll {
 }
 
 /* PRODUCT */
-
 .product {
-  margin-top: 141px;
+  margin-top: 140px;
 }
 .product-title {
   text-align: center;
@@ -375,7 +410,7 @@ body.no-scroll {
 .product-cards-wrapper {
   display: flex;
   justify-content: space-between;
-  padding: 46px 0;
+  padding: 49px 0;
 }
 .product-card {
   position: relative;
@@ -416,7 +451,7 @@ body.no-scroll {
   fill: #5d6c7b;
 }
 .product-card-footer {
-  padding: 20px 25px;
+  padding: 18px 25px;
 }
 .product-card-feature {
   display: flex;
@@ -473,7 +508,7 @@ body.no-scroll {
   fill: #6f73ee;
 }
 .product-button {
-  margin-top: 14px;
+  margin-top: 16px;
   padding: 10px 0;
   width: 100%;
   font-size: 12px;
@@ -481,9 +516,8 @@ body.no-scroll {
 }
 
 /* CALL TO ACTION */
-
 .cta-section {
-  margin-top: 56px;
+  margin-top: 52px;
 }
 .cta-bg {
   background-color: #f4f7fb;
@@ -508,7 +542,7 @@ body.no-scroll {
   max-width: 612px;
 }
 .cta-text {
-  margin-top: 30px;
+  margin-top: 33px;
   font-weight: 500;
   font-size: 16px;
   line-height: 23px;
@@ -561,6 +595,15 @@ body.no-scroll {
   border-radius: 2px;
   cursor: pointer;
 }
+.modal-checkbox-checkmark {
+  position: relative;
+  display: block;
+  width: 16px;
+  height: 16px;
+  background-color: #f4f7fb;
+  border-radius: 2px;
+  cursor: pointer;
+}
 .checkbox-checkmark:after {
   content: "";
   position: absolute;
@@ -601,9 +644,10 @@ body.no-scroll {
 }
 .cta-email-wrapper {
   display: flex;
-  justify-content: space-between;
+  gap: 100px;
   align-items: center;
-  padding: 24px 0;
+  padding-top: 24px;
+  padding-bottom: 21px;
 }
 .cta-email-text {
   max-width: 440px;
@@ -616,18 +660,19 @@ body.no-scroll {
 .footer-input-form {
   display: flex;
   align-items: center;
+  gap: 20px;
+  min-width: 570px;
 }
-.cta-email-input-group {
+.input-email {
   flex-shrink: 0;
   width: 100%;
   max-width: 410px;
   padding: 15px 25px;
   border-radius: 5px;
   background-color: rgba(255, 255, 255, 0.2);
-}
-.input-email {
+  font-size: 16px;
+  line-height: 23px;
   color: #ffffff;
-  max-width: 410px;
 }
 .input-email::-webkit-input-placeholder {
   /* WebKit browsers */
@@ -650,7 +695,6 @@ body.no-scroll {
 }
 
 /*  FOOTER */
-
 .footer-bg {
   background-color: #f4f7fb;
   background-size: 100%;
@@ -658,9 +702,13 @@ body.no-scroll {
   margin: 0 auto;
 }
 .footer-top {
-  padding: 42px 0 75px;
+  padding: 46px 0 75px;
   display: flex;
   justify-content: space-between;
+}
+.footer-top-list-content {
+  display: flex;
+  column-gap: 125px;
 }
 .footer-top-title {
   margin-bottom: 17px;
@@ -673,6 +721,10 @@ body.no-scroll {
   font-size: 14px;
   line-height: 20px;
   color: #5d6c7b;
+  transition: color 0.3s;
+}
+.footer-top-item-link:hover {
+  color: #6f73ee;
 }
 .footer-call-link {
   text-decoration: none;
@@ -686,8 +738,9 @@ body.no-scroll {
   gap: 44px;
 }
 .footer-top-contact-wrapper {
-  gap: 16px;
   display: flex;
+  columns: 2;
+  column-gap: 20px;
 }
 .footer-top-contact {
   display: flex;
@@ -706,6 +759,10 @@ body.no-scroll {
   font-size: 16px;
   line-height: 23px;
   color: #282739;
+  transition: color 0.3s;
+}
+.footer-phone:hover {
+  color: #6f73ee;
 }
 .footer-phone-time {
   font-weight: 400;
@@ -714,7 +771,682 @@ body.no-scroll {
   color: #5d6c7b;
 }
 .footer-social {
-  padding: 36px 0;
-  border-top: 1px solid #5d6c7b;
-  border-bottom: 1px solid #5d6c7b;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 24px;
+  padding-bottom: 30px;
+  border-top: 1px solid #5d6c7b40;
+  border-bottom: 1px solid #5d6c7b40;
+}
+.footer-social-wrapper {
+  display: flex;
+}
+.footer-logo {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 43px;
+  text-transform: uppercase;
+  color: #282739;
+  margin-right: 59px;
+}
+.footer-social-store {
+  display: flex;
+  gap: 10px;
+}
+.footer-social-list {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.footer-social-item {
+  padding-top: 5px;
+  padding-left: 12px;
+  padding-bottom: 7px;
+  width: 123px;
+  height: 45px;
+  border-radius: 5px;
+  background-color: #fff;
+}
+.footer-social-link {
+  display: flex;
+  align-items: center;
+}
+.footer-social-icon {
+  margin-right: 13px;
+  width: 20px;
+  height: 20px;
+}
+.footer-social-text-wrapper span {
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 14px;
+  color: #5d6c7b;
+}
+.footer-social-text {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  color: #282739;
+}
+.footer-bottom {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 18px;
+  padding-bottom: 20px;
+}
+.footer-bottom-info-block {
+  display: flex;
+  align-items: center;
+  gap: 44px;
+}
+.footer-bottom-info-block-link {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 17px;
+  color: #5d6c7b;
+  transition: color 0.3s;
+}
+.footer-bottom-info-block-link:hover {
+  color: #6f73ee;
+}
+.footer-bottom-program-block-wrapper {
+  display: flex;
+  gap: 37px;
+}
+.footer-bottom-program-block {
+  display: flex;
+  gap: 4px;
+}
+.footer-bottom-program-block-icons-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  border: 0.5px solid #eaebed;
+  border-radius: 5px;
+  width: 34px;
+  height: 20px;
+}
+.icon-google-pay {
+  width: 24px;
+  height: 11px;
+}
+.icon-apple-pay {
+  width: 24px;
+  height: 11px;
+}
+.icon-visa {
+  width: 24px;
+  height: 8px;
+}
+.icon-mastercard {
+  width: 23px;
+  height: 14px;
+}
+.icon-maestro {
+  width: 23px;
+  height: 14px;
+}
+.icon-webmoney {
+  width: 24px;
+  height: 15px;
+}
+.icon-qiwi {
+  width: 15px;
+  height: 16px;
+}
+.chat-wrapper {
+  display: flex;
+  align-items: center;
+}
+.chat-text {
+  margin-right: 15px;
+}
+.chat {
+  display: flex;
+  align-items: center;
+  gap: 17px;
+}
+.chat-text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #282739;
+}
+.icon-chat {
+  height: 16px;
+  width: 16px;
+  fill: #5d6c7b;
+  transition: fill 0.3s;
+}
+.icon-chat:hover {
+  fill: #6f73ee;
+}
+
+/* MODAL */
+.modal {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateX(-132%);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(40, 45, 51, 0.5);
+  z-index: 300;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.modal.is-open {
+  transform: translateX(0);
+  visibility: visible;
+  opacity: 1;
+}
+.modal.is-open .modal-dialog {
+  opacity: 1;
+  transform: translateY(0);
+}
+.modal-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(40, 45, 51, 0.5);
+}
+.modal-dialog {
+  display: flex;
+  column-gap: 69px;
+  position: relative;
+  opacity: 0;
+  transform: translateY(-10%);
+  transition: transform 0.3s, opacity 0.3s;
+  padding-top: 40px;
+  padding-bottom: 37px;
+  padding-left: 40px;
+  background-color: #ffffff;
+  max-width: 720px;
+  width: 100%;
+}
+.modal-title {
+  font-weight: 600;
+  font-size: 25px;
+  line-height: 36px;
+  max-width: 277px;
+  margin-bottom: 7px;
+}
+.modal-cta {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #282739;
+  max-width: 286px;
+}
+.modal-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: #282739;
+  margin-bottom: 29px;
+}
+.mogal-form {
+  position: relative;
+  margin-top: 123px;
+  border: 1px solid #eaebed;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  max-width: 263px;
+  width: 100%;
+}
+.input-group-label {
+  position: absolute;
+  top: -40px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 17px;
+  color: #5D6C7B;
+}
+.modal-input-user-phone {
+  padding: 15px 25px;
+}
+.modal-button {
+  padding: 15px 57px;
+}
+.modal-close-button {
+  top: 20px;
+  right: 20px;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+}
+
+@media (max-width: 1400px) {
+  .container {
+    max-width: 1050px;
+  }
+  .title {
+    font-weight: 600;
+    font-size: 28px;
+    line-height: 51px;
+    font-style: normal;
+    color: #282739;
+    text-transform: uppercase;
+  }
+  .title-size-M {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 29px;
+    color: #282739;
+    text-transform: none;
+  }
+  .title-size-S {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    color: #282739;
+    text-transform: none;
+  }
+  .title-color-light {
+    color: #fff;
+  }
+  .search-form {
+    max-width: 555px;
+  }
+  .main-img {
+    max-width: 1190px;
+  }
+  .title-main {
+    max-width: 485px;
+  }
+  .promo-block-title {
+    max-width: 520px;
+  }
+  .promo-block1-img {
+    right: -70px;
+  }
+  .promo-block-2-title {
+    max-width: 530px;
+  }
+  .promo-block-2-img {
+    left: -70px;
+  }
+  .promo-block-2-wrapper {
+    max-width: 465px;
+  }
+  .cta-email-wrapper {
+    gap: 30px;
+  }
+  .cta-email-input-group {
+    margin-right: 20px;
+  }
+}
+
+@media (max-width: 1199px) {
+  html {
+    font-size: 12px;
+  }
+  .container {
+    max-width: 930px;
+  }
+  .title {
+    font-size: 25px;
+    line-height: 44px;
+  }
+  .title-color-light {
+    color: #fff;
+  }
+  .search-form {
+    max-width: 390px;
+  }
+  .search-button {
+    margin-left: 20px;
+  }
+  .control-block {
+    margin-left: 20px;
+  }
+  .button {
+    font-size: 14px;
+  }
+  .button-light {
+    font-size: 14px;
+  }
+  .main {
+    margin-top: 20px;
+  }
+  .main-img {
+    width: 100%;
+    max-width: 100%;
+    margin: 0 auto;
+    background-color: #6f73ee;
+    background-image: none;
+    border-radius: 0;
+  }
+  .main-element-icon-wrapper {
+    padding: 9px;
+  }
+  .main-text {
+    font-size: 18px;
+    margin-top: 0px;
+  }
+  .main-content-elements {
+    margin-top: 15px;
+  }
+  .main-element-icon {
+    width: 14px;
+    height: 14px;
+  }
+  .main-button {
+    margin-top: 20px;
+    padding: 10px 30px;
+  }
+  .promo-block-title {
+    max-width: 460px;
+  }
+  .promo-block-list {
+    margin-top: 16px;
+    margin-bottom: 30px;
+  }
+  .promo-block1-img {
+    position: static;
+    right: -35px;
+  }
+  .promo-block-list-item {
+    font-size: 12px;
+  }
+  .promo-block-content {
+    flex-direction: column;
+  }
+  .promo-block-2-wrapper {
+    margin-bottom: 30px;
+    max-width: 520px;
+  }
+  .promo-block-2-img {
+    position: static;
+    left: -35px;
+  }
+  .promo-block-2-list-item {
+    font-size: 12px;
+  }
+  .product-title {
+    margin: 0 auto;
+    max-width: 544px;
+  }
+  .product-cards-wrapper {
+    row-gap: 25px;
+    flex-wrap: wrap;
+    max-width: 544px;
+    margin: 0 auto;
+  }
+  .cta-title {
+    max-width: 530px;
+  }
+  .cta-img {
+    display: none;
+  }
+  .cta-email-wrapper {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+@media (max-width: 991px) {
+  .container {
+    max-width: 820px;
+  }
+  .search-form {
+    max-width: 310px;
+  }
+  .promo-block {
+    margin-top: 30px;
+  }
+  .promo-block-2 {
+    margin-top: 30px;
+  }
+  .promo-block-2-wrapper {
+    max-width: 570px;
+  }
+  .promo-block-2-title {
+    max-width: 570px;
+  }
+  .footer-top {
+    padding: 40px 0 40px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    row-gap: 30px;
+    max-width: 600px;
+  }
+  .footer-top-contact-wrapper {
+    gap: 16px;
+    display: flex;
+    flex-direction: column;
+  }
+  .footer-social {
+    display: flex;
+    row-gap: 30px;
+    flex-direction: column;
+  }
+  .footer-social-list {
+    gap: 40px;
+  }
+  .modal-img {
+    display: none;
+  }
+  .modal-dialog {
+    padding: 55px 20px;
+    column-gap: 0;
+    max-width: 300px;
+    width: 100%;
+  }
+  .modal-title {
+    font-size: 23px;
+    line-height: 40px;
+    margin-bottom: 15px;
+  }
+  .mogal-form {
+    margin-top: 60px;
+  }
+  .input-group-label {
+    position: absolute;
+    top: -20px;
+  }
+  .modal-button {
+    padding: 15px 0;
+    width: 100%;
+  }
+}
+
+@media (max-width: 841px) {
+  .container {
+    max-width: 500px;
+  }
+  .control-block {
+    display: none;
+  }
+  .search-form {
+    max-width: 260px;
+  }
+  .promo-block1-img {
+    width: 500px;
+    height: 400px;
+  }
+  .promo-block-2-img {
+    width: 500px;
+    height: 400px;
+  }
+  .cta-form-wrapper {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+  }
+  .cta-button {
+    margin-left: 0;
+    margin-top: 10px;
+  }
+  .cta-email {
+    margin-top: 40px;
+  }
+  .footer-bottom {
+    display: flex;
+    row-gap: 20px;
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 575px) {
+  .container {
+    max-width: 280px;
+  }
+  .title {
+    font-size: 25px;
+    line-height: 30px;
+    text-transform: none;
+  }
+  .title-size-M {
+    font-size: 16px;
+    line-height: 29px;
+  }
+  .title-size-S {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 26px;
+    color: #282739;
+    text-transform: none;
+  }
+  .burger-menu {
+    display: flex;
+    align-items: center;
+    width: 20px;
+    height: 20px;
+  }
+  .burger-icon {
+    width: 24px;
+    height: 24px;
+    fill: #6f73ee;
+  }
+  .header-nav {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 20px;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    z-index: 1000;
+    transition: right 0.2s;
+  }
+  .header-nav.active {
+    right: 0;
+  }
+  .header-nav-close {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: block;
+    width: 24px;
+    height: 24px;
+  }
+  .burger-close {
+    fill: #6f73ee;
+    width: 24px;
+    height: 24px;
+  }
+  .header-nav-item {
+    height: auto;
+  }
+  .header-nav-social {
+    margin-left: 0px;
+  }
+  .adress {
+    display: flex;
+    row-gap: 5px;
+    margin-bottom: 19px;
+    flex-wrap: wrap;
+  }
+  .main-text {
+    font-size: 14px;
+  }
+  .main-content-elements {
+    gap: 10px;
+    flex-wrap: wrap;
+  }
+  .search-form {
+    max-width: 100%;
+    width: 100%;
+    margin: 0;
+  }
+  .search {
+    justify-content: space-between;
+    flex-wrap: wrap;
+    row-gap: 10px;
+  }
+  .promo-block-2 {
+    margin-top: 10px;
+  }
+  .promo-block-2-img {
+    width: 100%;
+  }
+  .product {
+    margin-top: -85px;
+  }
+  .product-cards-wrapper {
+    width: 100%;
+    max-width: 100%;
+
+    padding: 30px 0;
+    justify-content: space-around;
+  }
+  .price-old {
+    font-size: 10px;
+  }
+  .price-new {
+    font-size: 16px;
+  }
+  .cta-title {
+    max-width: 385px;
+  }
+  .cta-content {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+  .cta-form {
+    width: 100%;
+  }
+  .footer-input-form {
+    row-gap: 15px;
+    flex-wrap: wrap;
+  }
+  .footer-top {
+    display: flex;
+    flex-direction: column;
+  }
+  .footer-top-list-buyer {
+    columns: 1;
+  }
+  .footer-social-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 20px;
+  }
+  .footer-social-store {
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+  }
+  .footer-social-list {
+    flex-wrap: wrap;
+    row-gap: 10px;
+    column-gap: 35px;
+  }
+  .footer-bottom-program-block-wrapper {
+    display: flex;
+    row-gap: 10px;
+    flex-wrap: wrap;
+  }
 }
